updated the footer while removing the extra footer component, fixed some errors with the eat and stay sections, added more spacing on top of the about us section

--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -23,3 +23,16 @@
         'opsz' 24;
     }
 }
+
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+.animate-scroll {
+    animation: scroll 30s linear infinite;
+}
